fixed resonsiveness on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,19 +9,23 @@
 
 /*----------------------Colors*/
 
-.about p, h4 {
+.about p, h2, h4 {
     color: white;
 }
 
 div q {
-    color: red;
+    color: yellow;
 }
+
 
 
 /*---------------Hero Image and Nav*/
 .nav-link {
     color:red;
 }
+
+
+
 
 .hero-box{
     margin: 0;
@@ -35,13 +39,6 @@ div q {
     position: relative;
     height: 400px;
     width: 100%;
-}
-.hero-nav {
-    
-    position: absolute;
-    top: 57%;
-    left: 40%;
-
 }
 
 /*------------------Sign Up Modal*/
@@ -74,21 +71,27 @@ h3 {
     color: white;
 }
 
+/*----------------------Home Page Cards*/
 
+.yellow-card {
+    background-color: yellow;
+}
 
+.red-card {
+    background-color: red;
+}
 
 
 /*-------------Music page cards*/
-card-img-top {
+
+/*card-img-top {
     width: 100%;
     height: 15vw;
     object-fit: cover;    
 }
-.merch img {
+merch img {
     height: 15vw;
-
 }
-
 
 
 /*------------------Footer----*/
